--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:id="@+id/mainActivityLayout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
@@ -81,7 +82,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="text"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginLeft="10dp"
+                android:background="@android:color/transparent"
                 android:hint="UserName"/>
 
         </LinearLayout>
@@ -111,7 +115,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_marginLeft="10dp"
+                android:background="@android:color/transparent"
                 android:hint="Password"/>
 
         </LinearLayout>
