--- a/app/src/main/res/layout/activity_shipment.xml
+++ b/app/src/main/res/layout/activity_shipment.xml
@@ -158,12 +158,23 @@
             android:layout_height="60dp">
 
             <LinearLayout
+                android:id="@+id/height"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="0.2"
                 android:background="@drawable/rectangle_grey_with_light">
+
+                <EditText
+                    android:id="@+id/ht"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="@android:color/transparent"
+                    android:hint="H(cm)"/>
 
             </LinearLayout>
 
@@ -174,6 +185,7 @@
                 android:text="X"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
@@ -187,6 +199,16 @@
                 android:layout_marginRight="5dp"
                 android:background="@drawable/rectangle_grey_with_light">
 
+                <EditText
+                    android:id="@+id/wdth"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="@android:color/transparent"
+                    android:hint="W(cm)"/>
+
             </LinearLayout>
 
             <TextView
@@ -195,6 +217,7 @@
                 android:layout_weight="0.1"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
+                android:layout_marginTop="10dp"
                 android:text="X"
                 android:textAllCaps="true"
                 android:textColor="@android:color/white"
@@ -208,6 +231,16 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:background="@drawable/rectangle_grey_with_light">
+
+                <EditText
+                    android:id="@+id/lngth"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="text"
+                    android:gravity="center_horizontal"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:background="@android:color/transparent"
+                    android:hint="L(cm)"/>
 
             </LinearLayout>
 
@@ -231,6 +264,17 @@
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:background="@drawable/rectangle_grey_with_light">
+
+            <EditText
+                android:id="@+id/type"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@android:color/transparent"
+                android:hint="Type"/>
+
         </LinearLayout>
 
         <TextView
@@ -251,6 +295,17 @@
             android:layout_height="60dp"
             android:orientation="horizontal"
             android:background="@drawable/rectangle_grey_with_light">
+
+            <EditText
+                android:id="@+id/wt"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:background="@android:color/transparent"
+                android:hint="Kg"/>
+
         </LinearLayout>
 
 
