--- a/app/src/main/res/drawable/background_image.xml
+++ b/app/src/main/res/drawable/background_image.xml
@@ -5,7 +5,7 @@
     <item>
         <bitmap
             android:gravity="center_horizontal|center_vertical"
-            android:src="@drawable/sender_mover" />
+            android:src="@drawable/wallpaper_thumb_01" />
     </item>
 
 </layer-list>
