--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#717173</color>
     <color name="colorPrimaryDark">#464646</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#003362</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
 </resources>
