--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,9 +14,9 @@
         <item name="windowNoTitle">true</item>
     </style>
     <style name="BackGroundImageView">
-        <item name="android:alpha">0.99</item>
+        <item name="android:alpha">0.90</item>
         <item name="android:scaleType">centerCrop</item>
-        <item name="android:src">@drawable/sender_mover</item>
+        <item name="android:src">@drawable/wallpaper_thumb_01</item>
     </style>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
