--- a/app/src/main/res/drawable/rectangle_grey_with_light.xml
+++ b/app/src/main/res/drawable/rectangle_grey_with_light.xml
@@ -3,7 +3,7 @@
     android:id="@+id/rectangle">
 
     <stroke android:width="2dp"
-        android:color="#cc222222" />
+        android:color="@color/colorAccent" />
 
     <padding
         android:left="2dp"
